filtered already added pbes, fixed duplicate wire invocation

--- a/force-app/main/default/lwc/kpnOrderSelectProducts/kpnOrderSelectProducts.html
+++ b/force-app/main/default/lwc/kpnOrderSelectProducts/kpnOrderSelectProducts.html
@@ -9,7 +9,7 @@
         </div>
         <!--Pagination -->
         <template if:true={paginationEnabled}>
-            <div class="slds-grid slds-gutters slds-grid_align-center slds-p-top_small">
+            <div class="slds-grid slds-gutters slds-grid_align-center slds-var-p-top_small">
                 <div class="slds-col">
                     <template if:true={previousDisabled}>
                         <lightning-button variant="neutral" title="previous" label="Previous" class="slds-float_left"
